csparql-core/src/main/java/eu/larkc/csparql/core/new_parser/CsparqlParser.java
/* CsparqlParser.java */
/* Generated By:JavaCC: Do not edit this line. CsparqlParser.java */
package eu.larkc.csparql.core.new_parser ;

import java.io.StringReader;
import eu.larkc.csparql.core.new_parser.utility_files.*;

public class CsparqlParser extends CsparqlParserBase implements CsparqlParserConstants {

public static CsparqlParser createAndParse(String queryString) throws ParseException{
    CsparqlParser parser = new CsparqlParser(new StringReader(TextUtilities.queryTextEnhancer(queryString)));
    System.out.println(TextUtilities.queryTextEnhancer(queryString));
    parser.Query();
    return parser;
  }

  final public void Query() throws ParseException {
    RegisterClause();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PREFIX:
      case BASE:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Prologue();
    }
    if (jj_2_1(5)) {
      SelectClause();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONSTRUCT:{
        ConstructClause();
        break;
        }
      case DESCRIBE:{
        DescribeClause();
        break;
        }
      case ASK:{
        AskClause();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FROM:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      if (jj_2_2(5)) {
        FromClause();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FROM:{
          FromStreamClause();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHERE:{
      WhereClause();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
setSparqlQuery(sparqlQuery) ;
    jj_consume_token(0);
}

  final public void Prologue() throws ParseException {Token t;
    if (jj_2_4(2)) {
      t = jj_consume_token(PREFIX);
sparqlQuery = sparqlQuery + t.image ;
      label_3:
      while (true) {
        if (jj_2_3(2)) {
          t = jj_consume_token(SINGLELETTERTEXT);
sparqlQuery = sparqlQuery + t.image ;
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case NUMBERS:{
            t = jj_consume_token(NUMBERS);
sparqlQuery = sparqlQuery + t.image ;
            break;
            }
          case SYMBOL:{
            t = jj_consume_token(SYMBOL);
sparqlQuery = sparqlQuery + t.image ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SPACE:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
      }
      t = jj_consume_token(IRIref);
sparqlQuery = sparqlQuery + t.image ;
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BASE:{
        t = jj_consume_token(BASE);
sparqlQuery = sparqlQuery + t.image ;
        t = jj_consume_token(IRIref);
sparqlQuery = sparqlQuery + t.image ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void RegisterClause() throws ParseException {Token t ; String queryName ="";
    if (jj_2_5(3)) {
      jj_consume_token(REGISTERSTREAM);
setOutputIsStream(true);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REGISTERQUERY:{
        jj_consume_token(REGISTERQUERY);
setOutputIsStream(false);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:{
        t = jj_consume_token(SINGLELETTERTEXT);
queryName = queryName + t.image ;
        break;
        }
      case NUMBERS:{
        t = jj_consume_token(NUMBERS);
queryName = queryName + t.image ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
    }
    jj_consume_token(SPACE);
    jj_consume_token(AS);
setCsparqlQueryName(queryName.trim());
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      jj_consume_token(SPACE);
    }
}

  final public void AddClause() throws ParseException {Token t;
    t = jj_consume_token(ADD);
sparqlQuery = sparqlQuery + t.image ;
    label_8:
    while (true) {
      label_9:
      while (true) {
        if (jj_2_6(2)) {
          t = jj_consume_token(AS);
sparqlQuery = sparqlQuery + t.image ;
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SINGLELETTERTEXT:{
            t = jj_consume_token(SINGLELETTERTEXT);
sparqlQuery = sparqlQuery + t.image ;
            break;
            }
          case SYMBOL:{
            t = jj_consume_token(SYMBOL);
sparqlQuery = sparqlQuery + t.image ;
            break;
            }
          case NUMBERS:{
            t = jj_consume_token(NUMBERS);
sparqlQuery = sparqlQuery + t.image ;
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:
        case AS:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
      }
      t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case AS:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_8;
      }
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void DescribeClause() throws ParseException {Token t;
    t = jj_consume_token(DESCRIBE);
sparqlQuery = sparqlQuery + t.image ;
    label_10:
    while (true) {
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ADD:{
          t = jj_consume_token(ADD);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case CONSTRUCT:{
          t = jj_consume_token(CONSTRUCT);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case SELECT:{
          t = jj_consume_token(SELECT);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case AS:{
          t = jj_consume_token(AS);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case SINGLELETTERTEXT:{
          t = jj_consume_token(SINGLELETTERTEXT);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case SYMBOL:{
          t = jj_consume_token(SYMBOL);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case NUMBERS:{
          t = jj_consume_token(NUMBERS);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SELECT:
        case ADD:
        case CONSTRUCT:
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:
        case AS:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
      }
      t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SELECT:
      case ADD:
      case CONSTRUCT:
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case AS:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
    }
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void AskClause() throws ParseException {Token t;
    t = jj_consume_token(ASK);
sparqlQuery = sparqlQuery + t.image ;
sparqlQuery = sparqlQuery + "\n";
}

  final public void SelectClause() throws ParseException {Token t;
    t = jj_consume_token(SELECT);
sparqlQuery = sparqlQuery + t.image ;
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case IRIref:
      case SPACE:
      case AS:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_13;
      }
      if (jj_2_7(3)) {
        t = jj_consume_token(SINGLELETTERTEXT);
sparqlQuery = sparqlQuery + t.image ;
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYMBOL:{
          t = jj_consume_token(SYMBOL);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case NUMBERS:{
          t = jj_consume_token(NUMBERS);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case IRIref:{
          t = jj_consume_token(IRIref);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case SPACE:{
          t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case AS:{
          t = jj_consume_token(AS);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void ConstructClause() throws ParseException {Token t;
    t = jj_consume_token(CONSTRUCT);
sparqlQuery = sparqlQuery + t.image ;
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case IRIref:
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_14;
      }
      if (jj_2_8(3)) {
        t = jj_consume_token(SINGLELETTERTEXT);
sparqlQuery = sparqlQuery + t.image ;
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYMBOL:{
          t = jj_consume_token(SYMBOL);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case NUMBERS:{
          t = jj_consume_token(NUMBERS);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case IRIref:{
          t = jj_consume_token(IRIref);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        case SPACE:{
          t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void FromClause() throws ParseException {Token t;
    t = jj_consume_token(FROM);
sparqlQuery = sparqlQuery + t.image ;
    //t = " " { s = s + t.image ; }
      //((t = <SINGLELETTERTEXT> { s = s + t.image ; } | t = <SYMBOL> { s = s + t.image ; })+ t = " " { s = s + t.image ; })+
       t = jj_consume_token(IRIref);
sparqlQuery = sparqlQuery + t.image ;
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_15;
      }
      t = jj_consume_token(SPACE);
sparqlQuery = sparqlQuery + t.image ;
    }
sparqlQuery = sparqlQuery + "\n";
}

  final public void FromStreamClause() throws ParseException {Token t ; String streamName =""; String s1 ="";
Window window;
    jj_consume_token(FROM);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NAMED:{
        ;
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        break label_16;
      }
      jj_consume_token(NAMED);
    }
    jj_consume_token(STREAM);
    t = jj_consume_token(IRIref);
streamName = t.image ;
    jj_consume_token(SPACE);
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_17;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(RANGE);
    window = Window();
    jj_consume_token(SYMBOL);
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        break label_18;
      }
      jj_consume_token(SPACE);
    }
StreamInfo si = new StreamInfo(streamName,window) ;
          addStreams(si);
}

  final public Window Window() throws ParseException {
Window window;
    if (jj_2_9(2)) {
      window = LogicalWindow();
{if ("" != null) return window;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:
      case TRIPLES:{
        window = PhysicalWindow();
{if ("" != null) return window;}
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public TimeUnit TimeUnit() throws ParseException {Token t; String timeunit = "";
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        break label_19;
      }
      t = jj_consume_token(SPACE);
timeunit = timeunit + t.image ;
    }
    t = jj_consume_token(SINGLELETTERTEXT);
    label_20:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SINGLELETTERTEXT:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_20;
      }
      jj_consume_token(SINGLELETTERTEXT);
    }
timeunit = timeunit + t.image ;
        if(!timeunit.equals("ms") && !timeunit.equals("s") && !timeunit.equals("m") && !timeunit.equals("h") && !timeunit.equals("d"))
                {if (true) throw new ParseException();}
{if ("" != null) return TimeUnit.getUnitOfMeasure(timeunit);}
    throw new Error("Missing return statement in function");
}

  final public TimeIntervalDescription WindowOverlap() throws ParseException {Token t; String tempStepValue = "";
TimeIntervalDescription stepDescription = new TimeIntervalDescription();
  TimeUnit tm;
    label_21:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        break label_21;
      }
      t = jj_consume_token(SPACE);
    }
    if (jj_2_10(2)) {
      t = jj_consume_token(STEP);
      label_22:
      while (true) {
        t = jj_consume_token(NUMBERS);
tempStepValue = tempStepValue + t.image ;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBERS:{
          ;
          break;
          }
        default:
          jj_la1[33] = jj_gen;
          break label_22;
        }
      }
      tm = TimeUnit();
stepDescription.setTimeUnit(tm) ; stepDescription.setValue(Integer.parseInt(tempStepValue)); {if ("" != null) return stepDescription;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TUMBLING:{
        t = jj_consume_token(TUMBLING);
{if ("" != null) return null;}
        break;
        }
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public LogicalWindow LogicalWindow() throws ParseException {Token t; String tempRangeValue = "";
    label_23:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        break label_23;
      }
      jj_consume_token(SPACE);
    }
TimeIntervalDescription rangeDescription = new TimeIntervalDescription();
   TimeIntervalDescription stepDescription = new TimeIntervalDescription();
   TimeUnit tm;
   boolean isTumbling;
    label_24:
    while (true) {
      t = jj_consume_token(NUMBERS);
tempRangeValue = tempRangeValue + t.image ;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBERS:{
        ;
        break;
        }
      default:
        jj_la1[36] = jj_gen;
        break label_24;
      }
    }
    tm = TimeUnit();
    stepDescription = WindowOverlap();
rangeDescription.setTimeUnit(tm) ;
   rangeDescription.setValue(Integer.parseInt(tempRangeValue));
   if(stepDescription == null)
                isTumbling = true;
   else
        isTumbling = false;

  {if ("" != null) return new LogicalWindow(rangeDescription,stepDescription,isTumbling) ;}
    throw new Error("Missing return statement in function");
}

  final public PhysicalWindow PhysicalWindow() throws ParseException {Token t; String windowRange = "";
    label_25:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SPACE:{
        ;
        break;
        }
      default:
        jj_la1[37] = jj_gen;
        break label_25;
      }
      t = jj_consume_token(SPACE);
    }
    t = jj_consume_token(TRIPLES);
    label_26:
    while (true) {
      t = jj_consume_token(NUMBERS);
windowRange = windowRange + t.image ;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBERS:{
        ;
        break;
        }
      default:
        jj_la1[38] = jj_gen;
        break label_26;
      }
    }
{if ("" != null) return new PhysicalWindow(Integer.parseInt(windowRange))  ;}
    throw new Error("Missing return statement in function");
}
